--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ project(GeoCatch VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+enable_testing(true)
 # Find required Qt6 components
-find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Widgets Core5Compat Sql)
+find_package(Qt6 6.5 REQUIRED COMPONENTS Quick Widgets Core5Compat Sql Test)
 
 # Standard project setup for Qt6
 qt_standard_project_setup(REQUIRES 6.5)
@@ -14,8 +15,6 @@ qt_standard_project_setup(REQUIRES 6.5)
 # Define the executable
 qt_add_executable(appGeoCatch
     main.cpp
-    validator.cpp
-    validator.h
 )
 
 # Add the QML module
@@ -24,13 +23,31 @@ qt_add_qml_module(appGeoCatch
     VERSION 1.0
     QML_FILES
         Main.qml
-        FontSystem.qml
     RESOURCES
         qml.qrc
         SOURCES databaseManager.cpp
         SOURCES databaseManager.h
-
+        SOURCES networkManager.h
+        SOURCES networkManager.cpp
+        SOURCES validator.h
+        SOURCES validator.cpp
+        SOURCES networkManagerTest.cpp
+        # SOURCES networkManagerTest.cpp
 )
+
+qt_add_resources(appGeoCatch "resources"
+    PREFIX "/"
+    FILES
+        resources/online.png
+        resources/offline.png
+        resources/globe.png
+)
+
+# prepared for QTest
+# add_executable(network_manager_tests networkManagerTest.cpp)
+
+# target_link_libraries(network_manager_tests PRIVATE Qt6::Core Qt6::Network Qt6::Test)
+# add_test(NAME NetworkManagerTests COMMAND network_manager_tests)
 
 # Set target properties
 set_target_properties(appGeoCatch PROPERTIES
@@ -39,12 +56,14 @@ set_target_properties(appGeoCatch PROPERTIES
     SKIP_AUTOMOC ON
 )
 
+
 # Link the executable with Qt6 libraries
 target_link_libraries(appGeoCatch
     PRIVATE Qt6::Quick
     PRIVATE Qt6::Widgets
     PRIVATE Qt6::Core5Compat
     PRIVATE Qt6::Sql
+    PRIVATE Qt6::Test
 )
 
 # Installation rules
